ingress-experiment/traefik-deployment.yaml
# Ingress deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-1
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-1
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-1
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb-1
        name: traefik-ingress-lb-1
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-lb-1
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --kubernetes.ingressClass=traefik-class-1
        - --kubernetes
        - --logLevel=DEBUG
        - --api
        - --accesslog.fields.names='StartLocal=keep StartUTC=drop'
        # - --configFile=/config/traefik.toml


---
# Ingress deployment (Multi-ingress setup)
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-2
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-2
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-2
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb-2
        name: traefik-ingress-lb-2
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-lb-2
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --kubernetes.ingressClass=traefik-class-2
        - --kubernetes
        - --logLevel=DEBUG
        - --api
