ingress-experiment/ingress.yaml
# App Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: traefik-class-1
    # traefik.ingress.kubernetes.io/service-weights: |
    #   frontend-3: 60%
    #   frontend-2: 40%
spec:
  rules:
  - host: k8s.local
    http:
      paths:
      - path: /status
        backend:
          serviceName: frontend-2
          servicePort: http
      - path: /delay
        backend:
          serviceName: frontend-3
          servicePort: http
      - path: /abc
        backend:
          serviceName: frontend-1
          servicePort: http
