ingress-experiment/traefik-ingress.yaml
# Ingress with basic auth
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui-1
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-class-1
    traefik.ingress.kubernetes.io/auth-type: basic
    traefik.ingress.kubernetes.io/auth-secret: admin
spec:
  rules:
  - host: k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui-1
          servicePort: admin

---
# Ingress with basic auth
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui-2
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-class-2
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: admin
spec:
  rules:
  - host: kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui-2
          servicePort: admin
